# IAT_patcher_samples

./: .appveyor.yml  CMakeLists.txt  README.md
BotMon/: CMakeLists.txt  README.md  crypt.cpp  crypt.h  http.cpp  http.h  inet.cpp  inet.h  logger.cpp  logger.h  main.cpp  main.def  main.h  processmod.cpp  processmod.h  util.cpp  util.h
ChangeColors/: CMakeLists.txt  README.md  main.cpp  main.def  main.h
ChangeColors/sample/: colors.cfg
HttpMonitor/: CMakeLists.txt  crypt.cpp  crypt.h  http.cpp  http.h  logger.h  main.cpp  main.def  processmod.cpp  processmod.h  util.cpp  util.h
ShowProc/: README.md  ShowProc.wap  main.asm  main.def
